validation sanity check done. Not enough memory to start training

--- a/fiery/configs/argoverse/baseline.yml
+++ b/fiery/configs/argoverse/baseline.yml
@@ -4,7 +4,7 @@ TAG: 'argoverse_baseline'
 
 GPUS: [0]
 
-BATCHSIZE: 3
+BATCHSIZE: 1
 TIME_RECEPTIVE_FIELD: 10
 N_FUTURE_FRAMES: 20
 
@@ -21,3 +21,5 @@ MODEL:
   SUBSAMPLE: False
 
 LOGGING_INTERVAL: 10
+
+N_WORKERS: 6
